<resources>
    <string name="app_name">FinaTra</string>
    <string name="title_activity_main">FinaTra</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">FinaTra</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_menu_home">Common Balance</string>
    <string name="nav_menu_settings">Settings</string>
    <string name="nav_menu_list_accounts">Accounts list</string>
    <string name="nav_menu_list_categories">Categories list</string>
    <string name="nav_menu_list_accounts_and_categories">Счета и категории</string>


    <string name="title_balance">Balance</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="nav_menu_about">About</string>
    <string name="desc_application_icon" translatable="false">Application Icon</string>
    <string name="version" translatable="false">v 0.000001</string>
    <string name="github_link" translatable="false">https://github.com/mashjulal/finance-tracker</string>
    <string name="author" translatable="false">Julia Mashinina (mashjulal)</string>
    <string name="desc_github_icon" translatable="false">Github icon</string>

    <string name="title_activity_about">About</string>
    <string name="category_icon_image">Category Icon Image</string>
    <string name="create_new_operation">Create new operation</string>
    <string name="create_new_account">Create account</string>
    <string name="create_new_category">Create category</string>
    <string name="category_type">Category operation type</string>
    <string name="show_more">Show more</string>
    <string name="zero" translatable="false">0</string>
    <string name="done">Done</string>
    <string name="currency">Currency</string>
    <string name="type">Operation Type</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="incomings">Incomings</string>
    <string name="outgoings">Outgoings</string>

    <string name="title_activity_edit_operation">Operation…</string>
    <string name="accounts">Accounts</string>
    <string name="categories">Categories list</string>

    <string name="all_accounts">All</string>
    <string name="error_operation_cant_be_added_to_all">Operation can\'t be add to all account.
        Please select other account.</string>
    <string name="account">Account</string>

    <string name="predefined_other_incomings_category">Other Incomings</string>
    <string name="predefined_other_outgoings_category">Other Outgoings</string>
    <string name="predefined_from_other_account_category">From other acoount</string>
    <string name="predefined_to_other_account_category">To other account</string>

    <string name="predefined_account">Cash (RUB)</string>
    <string name="radio_none_text">Do not repeat</string>
    <string name="radio_weekly_text">Repeat weekly</string>
    <string name="radio_monthly_text">Repeat monthly</string>

    <string name="predefined_wrong">NAME?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_menu_accounts">Accounts</string>

    <string name="chart_title">Report For Period</string>

</resources>
